# orbit-correction

./: .gitignore  README.md  nonlinear-least-squares-method.tex
data/: 1I.txt  main.py  obscodes.txt  output.txt
model/: CMakeLists.txt
model/include/: correction.hpp  gauss.hpp  interpolation.hpp  model.hpp  utils.hpp
model/src/: correction.cpp  gauss.cpp  interpolation.cpp  main.cpp  model.cpp
notes/: nonlinear-least-squares-method.tex
src/: main.cpp  model.cpp
visualization/: main.py  orbit_data.txt
